testdata/baselines/reference/submodule/conformance/dynamicImportDefer(module=es2015).errors.txt
b.ts(1,1): error TS1343: The 'import.meta' meta-property is only allowed when the '--module' option is 'es2020', 'es2022', 'esnext', 'system', 'node16', 'node18', 'node20', or 'nodenext'.
b.ts(1,8): error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?


==== a.ts (0 errors) ====
    export function foo() {
      console.log("foo from a");
    }
    
==== b.ts (2 errors) ====
    import.defer("./a.js").then(ns => {
    ~~~~~~~~~~~~
!!! error TS1343: The 'import.meta' meta-property is only allowed when the '--module' option is 'es2020', 'es2022', 'esnext', 'system', 'node16', 'node18', 'node20', or 'nodenext'.
           ~~~~~
!!! error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
      ns.foo();
    });
    